--- a/index.html
+++ b/index.html
@@ -1,28 +1,52 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kitty Kibble Creations - Healthy Food for Happy Cats</title>
-    <meta name="description" content="Premium cat food made with natural ingredients. Your cat will love our recipes!" />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="Kitty Kibble Creations - Healthy Food for Happy Cats" />
-    <meta property="og:description" content="Premium cat food made with natural ingredients. Your cat will love our recipes!" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  </head>
-
-  <body>
-    <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+<DOCTYPEE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <link rel="icon" type="image/svg+xml" href="./public/favicon.ico" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <met
+        name="description  content="
+        Kitty
+        Kibble
+        Creations
+        -
+        преміальний
+        корм
+        для
+        домашніх
+        тварин.
+        Натуральні
+        інгредієнти,
+        висока
+        якість,
+        доставка
+        по
+        всій
+        Україні.
+      />
+      <meta name="theme-color" content="#ffffff" />
+      <meta property="og:title" content="Kitty Kibble Creations" />
+      <met
+        property="og:description  content="
+        Преміальний
+        корм
+        для
+        домашніх
+        тварин
+      />
+      <meta property="og:type" content="website" />
+      <meta property="og:image" content="/og-image.jpg" />
+      <title>
+        Kitty Kibble Creations - Преміальний корм для домашніх тварин
+      </title>
+      <link rel="preconnect" href="https://images.unsplash.com" />
+      <link rel="dns-prefetch" href="https://images.unsplash.com" />
+    </head>
+    <body>
+      <div id="root"></div>
+      <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
+      <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+      <script type="module" src="/src/main.tsx"></script>
+    </body>
+  </html>
+</DOCTYPEE>
